namespace Chicken_Azure.Core.Domain.Enums
{
    public enum JobType
    {
        FullTime,
        PartTime,
        Remote
    }
}
